--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
+    "jwt-decode": "^4.0.0",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
