--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.14.3",
+    "@cloudinary/url-gen": "^1.22.0",
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.12.2",
     "framer-motion": "^12.23.24",
